--- a/trunk/MDT_Tools/MDT.Tools.DB.Java_CodeGen.Plugin/MDT.Tools.DB.Java_CodeGen.Plugin.csproj
+++ b/trunk/MDT_Tools/MDT.Tools.DB.Java_CodeGen.Plugin/MDT.Tools.DB.Java_CodeGen.Plugin.csproj
@@ -33,6 +33,8 @@
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>MDT.Tools.pfx</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -125,6 +127,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <None Include="MDT.Tools.pfx" />
     <None Include="templates\iws.java.vm">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
