--- a/trunk/MDT_Tools/MDT.Tools.DB.TriggerGen.Plugin/MDT.Tools.DB.TriggerGen.Plugin.csproj
+++ b/trunk/MDT_Tools/MDT.Tools.DB.TriggerGen.Plugin/MDT.Tools.DB.TriggerGen.Plugin.csproj
@@ -45,7 +45,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>..\client\plugin\MDT.Tools.DB.TriggerGen.Plugin\</OutputPath>
+    <OutputPath>..\client\plugin\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -71,6 +71,7 @@
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -88,6 +89,14 @@
     <Compile Include="Gen\IGenTrigger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Trigger_GenPlugin.cs" />
+    <Compile Include="UI\ExecuteSql.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\ExecuteSql.Designer.cs">
+      <DependentUpon>ExecuteSql.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Utils\FilePathHelper.cs" />
+    <Compile Include="Utils\TgGenHelper.cs" />
     <Compile Include="Utils\TriggerInfo.cs" />
     <Compile Include="Utils\TriggerParams.cs" />
     <Compile Include="Utils\TriggerType.cs" />
@@ -108,6 +117,16 @@
       <ProductName>Windows Installer 3.1</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="templates\tg.bbox.aq.withaudit.sql.vm" />
+    <None Include="templates\tg.bbox.aq.withoutaudit.sql.vm" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="UI\ExecuteSql.resx">
+      <DependentUpon>ExecuteSql.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
