--- a/MDT_Tools/client/control/dbconfig.ini
+++ b/MDT_Tools/client/control/dbconfig.ini
@@ -1,2 +1,3 @@
 ﻿[Oracle]
+192.168.2.211="Data Source=192.168.2.211:1521/db; User Id=owndukondb; Password=owndukondb"
 192.168.2.251="Data Source=192.168.2.251:1521/atsdb; User Id=ukon; Password=ukon"
