--- a/trunk/MDT_Tools/MDT.Tools/App.config
+++ b/trunk/MDT_Tools/MDT.Tools/App.config
@@ -2,6 +2,7 @@
 <configuration>
   <appSettings>
     <add key="App" value="MDT 实用工具管理器"/>
+    <add key="UserClosing" value="false"/>
   </appSettings>
   <runtime>
     <gcConcurrent enabled="true" />
