--- a/MDT_Tools/MDT.Tools/App.config
+++ b/MDT_Tools/MDT.Tools/App.config
@@ -3,6 +3,7 @@
   <appSettings>
     <add key="App" value="MDT 实用工具管理器"/>
     <add key="UserClosing" value="false"/>
+    <add key="AutoUpdate" value="MDT.Tools.AutoUpdater.exe"/>
   </appSettings>
   <runtime>
     <gcConcurrent enabled="true" />
