c#代码结构调整，重新调整模板

--- a/MDT_Tools/client/control/csharp_codegenconfig.ini
+++ b/MDT_Tools/client/control/csharp_codegenconfig.ini
@@ -1,12 +1,12 @@
 [CsharpCodeGenConfig]
-ModelNameSpace=Ats.YuKon.Model
-IDALNameSpace=Ats.YuKon.DAL.Interface.DataManager
-DALNameSpace=Ats.YuKon.DAL.WebService.DataManager
+ModelNameSpace=Ats.Model
+IDALNameSpace=Ats.DAL.Interface.DataManager
+DALNameSpace=Ats.DAL.WebService.DataManager
 BLLNameSpace=Atf.Yukon.Plugin.DataManager.Modifiers
 PluginName=Modifiers
 OutPut=C:\Users\Administrator\Desktop\test\
 TableFilter=
-IsShowGenCode=True
+IsShowGenCode=False
 IsShowComment=False
 CodeRule=ibatis
 Ibatis=F:\Program Files\client\control\ATSModelConfig_ORA.xml
