增加退出保存工作区，再次打开恢复工作区，并调整weifenluo代码

--- a/MDT_Tools/MDT.Tools.DB.Plugin/MDT.Tools.DB.Plugin.csproj
+++ b/MDT_Tools/MDT.Tools.DB.Plugin/MDT.Tools.DB.Plugin.csproj
@@ -91,6 +91,12 @@
     <Compile Include="UI\ConfigForm.Designer.cs">
       <DependentUpon>ConfigForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="UI\Explorer.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\Explorer.Designer.cs">
+      <DependentUpon>Explorer.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI\OracleDBConfigForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -118,6 +124,10 @@
   <ItemGroup>
     <EmbeddedResource Include="UI\ConfigForm.resx">
       <DependentUpon>ConfigForm.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\Explorer.resx">
+      <DependentUpon>Explorer.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="UI\OracleDBConfigForm.resx">
