--- a/MDT_Tools/client/control/templateconfig.ini
+++ b/MDT_Tools/client/control/templateconfig.ini
@@ -1,15 +1,22 @@
 ﻿
 [TemplateConfig]
-TemplateNum=0
+TemplateNum=1
 
 [TemplateParas]
 TemplateNum=1
 MenuName1=自定义测试
 #DB,Fix
-DataTye1=DB
+DataTye1=Fix
 TemplateName1=template.test.createtable.sql.vm
+
+#Java代码一般保存为GBK
 SaveFileEncoding1=UTF-8
 #SaveFilePath1=
-IsShowGenCode1=true
+
+#如果IsAutoGenSaveFileName=true,系统会自动根据节点名字+"."+CodeLanguage来形成名字，忽略SaveFileName的配置
+IsAutoGenSaveFileName1=true
+SaveFileName1=standerheader.java
+
+IsShowGenCode1=false
 #Java,C#,TSQL,HTML,JavaScript,XML,C++.NET
 CodeLanguage1=TSQL
