--- a/MDT_Tools/MDT.ThirdParty.Controls/MDT.ThirdParty.Controls.csproj
+++ b/MDT_Tools/MDT.ThirdParty.Controls/MDT.ThirdParty.Controls.csproj
@@ -73,6 +73,11 @@
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="NVelocity, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\MDT.Tools\lib\NVelocity.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -105,211 +110,6 @@
     <Compile Include="AutoUpdater\DownloadProgress.designer.cs">
       <DependentUpon>DownloadProgress.cs</DependentUpon>
     </Compile>
-    <Compile Include="NVelocity\App\Event\EventCartridge.cs" />
-    <Compile Include="NVelocity\App\Event\EventHandlerUtil.cs" />
-    <Compile Include="NVelocity\App\Event\IEventHandler.cs" />
-    <Compile Include="NVelocity\App\Event\IEventHandlerMethodExecutor.cs" />
-    <Compile Include="NVelocity\App\Event\IMethodExceptionEventHandler.cs" />
-    <Compile Include="NVelocity\App\Event\Implement\EscapeHtmlReference.cs" />
-    <Compile Include="NVelocity\App\Event\Implement\EscapeJavaScriptReference.cs" />
-    <Compile Include="NVelocity\App\Event\Implement\EscapeReference.cs" />
-    <Compile Include="NVelocity\App\Event\Implement\EscapeSqlReference.cs" />
-    <Compile Include="NVelocity\App\Event\Implement\EscapeXmlReference.cs" />
-    <Compile Include="NVelocity\App\Event\Implement\IncludeNotFound.cs" />
-    <Compile Include="NVelocity\App\Event\Implement\IncludeRelativePath.cs" />
-    <Compile Include="NVelocity\App\Event\Implement\InvalidReferenceInfo.cs" />
-    <Compile Include="NVelocity\App\Event\Implement\PrintExceptions.cs" />
-    <Compile Include="NVelocity\App\Event\Implement\ReportInvalidReferences.cs" />
-    <Compile Include="NVelocity\App\Event\IncludeEventExecutor.cs" />
-    <Compile Include="NVelocity\App\Event\INullSetEventHandler.cs" />
-    <Compile Include="NVelocity\App\Event\InvalidGetMethodExecutor.cs" />
-    <Compile Include="NVelocity\App\Event\IReferenceInsertionEventHandler.cs" />
-    <Compile Include="NVelocity\App\Velocity.cs" />
-    <Compile Include="NVelocity\App\VelocityEngine.cs" />
-    <Compile Include="NVelocity\Commons\Collections\ExtendedProperties.cs" />
-    <Compile Include="NVelocity\Commons\Collections\KeyedListEnumerator.cs" />
-    <Compile Include="NVelocity\Commons\Collections\LRUMap.cs" />
-    <Compile Include="NVelocity\Commons\Collections\PropertiesReader.cs" />
-    <Compile Include="NVelocity\Commons\Collections\PropertiesTokenizer.cs" />
-    <Compile Include="NVelocity\Commons\Collections\StringTokenizer.cs" />
-    <Compile Include="NVelocity\Context\AbstractContext.cs" />
-    <Compile Include="NVelocity\Context\ChainedInternalContextAdapter.cs" />
-    <Compile Include="NVelocity\Context\EvaluateContext.cs" />
-    <Compile Include="NVelocity\Context\IContext.cs" />
-    <Compile Include="NVelocity\Context\IInternalContextAdapter.cs" />
-    <Compile Include="NVelocity\Context\IInternalEventContext.cs" />
-    <Compile Include="NVelocity\Context\IInternalHousekeepingContext.cs" />
-    <Compile Include="NVelocity\Context\IInternalWrapperContext.cs" />
-    <Compile Include="NVelocity\Context\InternalContextAdapterImpl.cs" />
-    <Compile Include="NVelocity\Context\InternalContextBase.cs" />
-    <Compile Include="NVelocity\Context\ProxyVMContext.cs" />
-    <Compile Include="NVelocity\Exception\IExtendedParseException.cs" />
-    <Compile Include="NVelocity\Exception\MacroOverflowException.cs" />
-    <Compile Include="NVelocity\Exception\MathException.cs" />
-    <Compile Include="NVelocity\Exception\MethodInvocationException.cs" />
-    <Compile Include="NVelocity\Exception\ParseErrorException.cs" />
-    <Compile Include="NVelocity\Exception\ResourceNotFoundException.cs" />
-    <Compile Include="NVelocity\Exception\RuntimeException.cs" />
-    <Compile Include="NVelocity\Exception\TemplateInitException.cs" />
-    <Compile Include="NVelocity\Exception\VelocityException.cs" />
-    <Compile Include="NVelocity\Extension\StringExtension.cs" />
-    <Compile Include="NVelocity\Runtime\Directive\Break.cs" />
-    <Compile Include="NVelocity\Runtime\Directive\Define.cs" />
-    <Compile Include="NVelocity\Runtime\Directive\Directive.cs" />
-    <Compile Include="NVelocity\Runtime\Directive\DirectiveType.cs" />
-    <Compile Include="NVelocity\Runtime\Directive\Evaluate.cs" />
-    <Compile Include="NVelocity\Runtime\Directive\Foreach.cs" />
-    <Compile Include="NVelocity\Runtime\Directive\Include.cs" />
-    <Compile Include="NVelocity\Runtime\Directive\InputBase.cs" />
-    <Compile Include="NVelocity\Runtime\Directive\Literal.cs" />
-    <Compile Include="NVelocity\Runtime\Directive\Macro.cs" />
-    <Compile Include="NVelocity\Runtime\Directive\MacroParseException.cs" />
-    <Compile Include="NVelocity\Runtime\Directive\Parse.cs" />
-    <Compile Include="NVelocity\Runtime\Directive\RuntimeMacro.cs" />
-    <Compile Include="NVelocity\Runtime\Directive\VelocimacroProxy.cs" />
-    <Compile Include="NVelocity\Runtime\IParserPool.cs" />
-    <Compile Include="NVelocity\Runtime\IRenderable.cs" />
-    <Compile Include="NVelocity\Runtime\IRuntimeServices.cs" />
-    <Compile Include="NVelocity\Runtime\Log\HoldingLogChute.cs" />
-    <Compile Include="NVelocity\Runtime\Log\ILogChute.cs" />
-    <Compile Include="NVelocity\Runtime\Log\Log.cs" />
-    <Compile Include="NVelocity\Runtime\Log\LogDisplayWrapper.cs" />
-    <Compile Include="NVelocity\Runtime\Log\LogManager.cs" />
-    <Compile Include="NVelocity\Runtime\Log\NullLogChute.cs" />
-    <Compile Include="NVelocity\Runtime\Log\SystemLogChute.cs" />
-    <Compile Include="NVelocity\Runtime\ParserPoolImpl.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\ICharStream.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\Node\AbstractExecutor.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\Node\ASTAddNode.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\Node\ASTAndNode.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\Node\ASTAssignment.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\Node\ASTBlock.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\Node\ASTComment.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\Node\ASTDirective.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\Node\ASTDivNode.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\Node\ASTElseIfStatement.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\Node\ASTElseStatement.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\Node\ASTEQNode.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\Node\ASTEscape.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\Node\ASTEscapedDirective.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\Node\ASTExpression.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\Node\ASTFalse.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\Node\ASTFloatingPointLiteral.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\Node\ASTGENode.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\Node\ASTGTNode.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\Node\ASTIdentifier.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\Node\ASTIfStatement.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\Node\ASTIncludeStatement.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\Node\ASTIntegerLiteral.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\Node\ASTIntegerRange.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\Node\ASTLENode.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\Node\ASTLTNode.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\Node\ASTMap.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\Node\ASTMathNode.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\Node\ASTMethod.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\Node\ASTModNode.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\Node\ASTMulNode.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\Node\ASTNENode.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\Node\ASTNotNode.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\Node\ASTObjectArray.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\Node\ASTOrNode.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\Node\ASTParameters.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\Node\ASTprocess.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\Node\ASTReference.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\Node\ASTSetDirective.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\Node\ASTStop.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\Node\ASTStringLiteral.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\Node\ASTSubtractNode.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\Node\ASTText.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\Node\ASTTrue.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\Node\ASTVariable.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\Node\ASTWord.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\Node\BooleanPropertyExecutor.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\Node\GetExecutor.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\Node\INode.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\Node\IParserVisitor.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\Node\MapGetExecutor.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\Node\MapSetExecutor.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\Node\MathUtils.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\Node\NodeUtils.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\Node\ObjectComparer.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\Node\PropertyExecutor.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\Node\PutExecutor.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\Node\SetExecutor.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\Node\SetPropertyExecutor.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\Node\SimpleNode.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\ParseException.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\Parser.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\ParserConstants.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\ParserState.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\ParserTokenManager.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\ParserTreeConstants.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\TemplateParseException.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\Token.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\TokenMgrError.cs" />
-    <Compile Include="NVelocity\Runtime\Parser\VelocityCharStream.cs" />
-    <Compile Include="NVelocity\Runtime\Resource\ContentResource.cs" />
-    <Compile Include="NVelocity\Runtime\Resource\IResourceCache.cs" />
-    <Compile Include="NVelocity\Runtime\Resource\Loader\DataSourceResourceLoader.cs" />
-    <Compile Include="NVelocity\Runtime\Resource\Loader\FileResourceLoader.cs" />
-    <Compile Include="NVelocity\Runtime\Resource\Loader\ResourceLoader.cs" />
-    <Compile Include="NVelocity\Runtime\Resource\Loader\ResourceLoaderFactory.cs" />
-    <Compile Include="NVelocity\Runtime\Resource\Loader\StringResourceLoader.cs" />
-    <Compile Include="NVelocity\Runtime\Resource\Loader\URLResourceLoader.cs" />
-    <Compile Include="NVelocity\Runtime\Resource\Resource.cs" />
-    <Compile Include="NVelocity\Runtime\Resource\ResourceCacheImpl.cs" />
-    <Compile Include="NVelocity\Runtime\Resource\ResourceFactory.cs" />
-    <Compile Include="NVelocity\Runtime\Resource\ResourceManager.cs" />
-    <Compile Include="NVelocity\Runtime\Resource\ResourceManagerImpl.cs" />
-    <Compile Include="NVelocity\Runtime\Resource\Util\IStringResourceRepository.cs" />
-    <Compile Include="NVelocity\Runtime\Resource\Util\StringResource.cs" />
-    <Compile Include="NVelocity\Runtime\Resource\Util\StringResourceRepositoryImpl.cs" />
-    <Compile Include="NVelocity\Runtime\RuntimeConstants.cs" />
-    <Compile Include="NVelocity\Runtime\RuntimeInstance.cs" />
-    <Compile Include="NVelocity\Runtime\RuntimeSingleton.cs" />
-    <Compile Include="NVelocity\Runtime\VelocimacroFactory.cs" />
-    <Compile Include="NVelocity\Runtime\VelocimacroManager.cs" />
-    <Compile Include="NVelocity\Runtime\Visitor\BaseVisitor.cs" />
-    <Compile Include="NVelocity\Runtime\Visitor\NodeViewMode.cs" />
-    <Compile Include="NVelocity\SupportClass.cs" />
-    <Compile Include="NVelocity\Template.cs" />
-    <Compile Include="NVelocity\Util\ArrayListWrapper.cs" />
-    <Compile Include="NVelocity\Util\ClassNullOp.cs" />
-    <Compile Include="NVelocity\Util\ExpressionUtil.cs" />
-    <Compile Include="NVelocity\Util\IContextAware.cs" />
-    <Compile Include="NVelocity\Util\Introspection\AbstractChainableUberspector.cs" />
-    <Compile Include="NVelocity\Util\Introspection\ClassMap.cs" />
-    <Compile Include="NVelocity\Util\Introspection\IChainableUberspector.cs" />
-    <Compile Include="NVelocity\Util\Introspection\IIntrospectorCache.cs" />
-    <Compile Include="NVelocity\Util\Introspection\Info.cs" />
-    <Compile Include="NVelocity\Util\Introspection\IntrospectionCacheData.cs" />
-    <Compile Include="NVelocity\Util\Introspection\IntrospectionUtils.cs" />
-    <Compile Include="NVelocity\Util\Introspection\Introspector.cs" />
-    <Compile Include="NVelocity\Util\Introspection\IntrospectorBase.cs" />
-    <Compile Include="NVelocity\Util\Introspection\IntrospectorCacheImpl.cs" />
-    <Compile Include="NVelocity\Util\Introspection\ISecureIntrospectorControl.cs" />
-    <Compile Include="NVelocity\Util\Introspection\IUberspect.cs" />
-    <Compile Include="NVelocity\Util\Introspection\IUberspectLoggable.cs" />
-    <Compile Include="NVelocity\Util\Introspection\IVelMethod.cs" />
-    <Compile Include="NVelocity\Util\Introspection\IVelPropertyGet.cs" />
-    <Compile Include="NVelocity\Util\Introspection\IVelPropertySet.cs" />
-    <Compile Include="NVelocity\Util\Introspection\LinkingUberspector.cs" />
-    <Compile Include="NVelocity\Util\Introspection\MethodEntry.cs" />
-    <Compile Include="NVelocity\Util\Introspection\MethodInvoker.cs" />
-    <Compile Include="NVelocity\Util\Introspection\MethodMap.cs" />
-    <Compile Include="NVelocity\Util\Introspection\PropertyAccessor.cs" />
-    <Compile Include="NVelocity\Util\Introspection\PropertyEntry.cs" />
-    <Compile Include="NVelocity\Util\Introspection\SecureIntrospectorImpl.cs" />
-    <Compile Include="NVelocity\Util\Introspection\SecureUberspector.cs" />
-    <Compile Include="NVelocity\Util\Introspection\UberspectImpl.cs" />
-    <Compile Include="NVelocity\Util\INullOp.cs" />
-    <Compile Include="NVelocity\Util\IRuntimeServicesAware.cs" />
-    <Compile Include="NVelocity\Util\ITemplateNumber.cs" />
-    <Compile Include="NVelocity\Util\Operator.cs" />
-    <Compile Include="NVelocity\Util\SimplePool.cs" />
-    <Compile Include="NVelocity\Util\StringUtils.cs" />
-    <Compile Include="NVelocity\Util\StructNullOp.cs" />
-    <Compile Include="NVelocity\VelocityContext.cs" />
     <Compile Include="TextEditor\Actions\BookmarkActions.cs" />
     <Compile Include="TextEditor\Actions\CaretActions.cs" />
     <Compile Include="TextEditor\Actions\ClipBoardActions.cs" />
@@ -605,10 +405,6 @@
     <None Include="AutoUpdater\Autoupdater.config" />
     <None Include="Docking\Resources\Thumbs.db" />
     <None Include="MDT.Tools.pfx" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="NVelocity\Runtime\Defaults\directive.properties" />
-    <EmbeddedResource Include="NVelocity\Runtime\Defaults\nvelocity.properties" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
