--- a/MDT_Tools/MDT.Tools.DB.Java_CodeGen.Plugin/MDT.Tools.DB.Java_CodeGen.Plugin.csproj
+++ b/MDT_Tools/MDT.Tools.DB.Java_CodeGen.Plugin/MDT.Tools.DB.Java_CodeGen.Plugin.csproj
@@ -19,7 +19,7 @@
     <OldToolsVersion>3.5</OldToolsVersion>
     <UpgradeBackupLocation />
     <IsWebBootstrapper>false</IsWebBootstrapper>
-    <SignAssembly>true</SignAssembly>
+    <SignAssembly>false</SignAssembly>
     <AssemblyOriginatorKeyFile>MDT.Tools.pfx</AssemblyOriginatorKeyFile>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
