--- a/MDT_Tools/MDT.Tools.ExcelAddin/Config/config.ini
+++ b/MDT_Tools/MDT.Tools.ExcelAddin/Config/config.ini
@@ -5,11 +5,27 @@ OutFileName=a{yyyyMMddHHmmss}.csv
 MenuName=Tullett
 
 [Quartz]
-Interval=0/30 * * * * ?
-
+Interval=0/10 * * * * ?
 
 [Log]
 Logon=true
+
+#Smtp Server Config
+[Smtp]
+
+Host=smtp.gmail.com
+Port=587
+EnableSsl=false
+UserName=iba.fiddler@gmail.com
+UserPwd=cy999000
+Subject=主题
+
+#Mail Config
+[Mail]
+
+From=iba.fiddler@gmail.com
+To=hlys1992@gmail.com,hlys1991@gmail.com
+Cc=zhen.huang@meridian.com.cn,shuai.tian@meridian.com.cn
 
 [Data]
 Header=currency,type,generator,market,maturity,bid,ask
