--- a/MDT_Tools/client/control/Autoupdater.config
+++ b/MDT_Tools/client/control/Autoupdater.config
@@ -3,5 +3,58 @@
   <Enabled>true</Enabled>
   <ServerUrl>http://113.10.168.242/client/AutoUpdateService.xml</ServerUrl>
   <UpdateFileList>
+    <LocalFile path="MDT.Tools.exe" lastver="1.1.0.2" size="48128" />
+    <LocalFile path="MDT.Tools.exe.config" lastver="1.0.0.0" size="510" />
+    <LocalFile path="Interop.Excel.dll" lastver="1.5.0.0" size="1093632" />
+    <LocalFile path="Interop.Microsoft.Office.Core.dll" lastver="2.3.0.0" size="217088" />
+    <LocalFile path="Interop.VBIDE.dll" lastver="5.3.0.0" size="57344" />
+    <LocalFile path="Interop.Word.dll" lastver="8.3.0.0" size="655360" />
+    <LocalFile path="MDT.ThirdParty.Controls.dll" lastver="1.0.0.0" size="980992" />
+    <LocalFile path="MDT.Tools.Core.dll" lastver="1.0.0.0" size="178688" />
+    <LocalFile path="Microsoft.Vbe.Interop.dll" lastver="11.0.5530" size="64088" />
+    <LocalFile path="NVelocity.dll" lastver="1.0.0.0" size="335360" />
+    <LocalFile path="office.dll" lastver="11.0.5530" size="223800" />
+    <LocalFile path="System.Data.SQLite.dll" lastver="1.0.66.0" size="904704" />
+    <LocalFile path="abator-config_1_0.dtd" lastver="1.0.0.0" size="7129" />
+    <LocalFile path="ATSModelConfig_ORA.xml" lastver="1.0.0.0" size="29466" />
+    <LocalFile path="csharp_codegenconfig.ini" lastver="1.0.0.0" size="395" />
+    <LocalFile path="dbconfig.ini" lastver="1.0.0.0" size="96" />
+    <LocalFile path="FIX44.xml" lastver="1.0.0.0" size="70014" />
+    <LocalFile path="java_codegenconfig.ini" lastver="1.0.0.0" size="273" />
+    <LocalFile path="templateconfig.ini" lastver="1.0.0.0" size="495" />
+    <LocalFile path="192.168.2.251_TABLES.data" lastver="1.0.0.0" size="50001" />
+    <LocalFile path="192.168.2.251_TABLES_COLUMNS.data" lastver="1.0.0.0" size="2533581" />
+    <LocalFile path="192.168.2.251_TABLES_PK.data" lastver="1.0.0.0" size="381846" />
+    <LocalFile path="MDT.Tools.DB.Common.dll" lastver="1.0.0.2" size="23552" />
+    <LocalFile path="MDT.Tools.DB.Csharp_CodeGen.Plugin.dll" lastver="1.0.0.1" size="30720" />
+    <LocalFile path="MDT.Tools.DB.DocGen.Plugin.dll" lastver="1.0.0.0" size="13824" />
+    <LocalFile path="MDT.Tools.DB.Java_CodeGen.Plugin.dll" lastver="1.1.0.2" size="27136" />
+    <LocalFile path="MDT.Tools.DB.Plugin.dll" lastver="1.0.1" size="61440" />
+    <LocalFile path="MDT.Tools.DB.SetComment.Plugin.dll" lastver="1.0.0.0" size="19968" />
+    <LocalFile path="MDT.Tools.DB.TriggerGen.Plugin.dll" lastver="1.0.0.0" size="40448" />
+    <LocalFile path="MDT.Tools.Fix.Common.dll" lastver="1.0.0.0" size="10240" />
+    <LocalFile path="MDT.Tools.Fix.Plugin.dll" lastver="1.0.0.1" size="20480" />
+    <LocalFile path="MDT.Tools.Template.Plugin.dll" lastver="1.0.0.1" size="17408" />
+    <LocalFile path="bll.cs.vm" lastver="1.0.0.0" size="894" />
+    <LocalFile path="bsimpl.java.vm" lastver="1.0.0.0" size="6034" />
+    <LocalFile path="comment.sql.vm" lastver="1.0.0.0" size="344" />
+    <LocalFile path="createtable.sql.vm" lastver="1.0.0.0" size="849" />
+    <LocalFile path="dal.cs.vm" lastver="1.0.0.0" size="3866" />
+    <LocalFile path="daocontext.xml.vm" lastver="1.0.0.0" size="403" />
+    <LocalFile path="fix.component.xml.vm" lastver="1.0.0.0" size="743" />
+    <LocalFile path="ibll.cs.vm" lastver="1.0.0.0" size="583" />
+    <LocalFile path="ibs.java.vm" lastver="1.0.0.0" size="1781" />
+    <LocalFile path="idal.cs.vm" lastver="1.0.0.0" size="2177" />
+    <LocalFile path="iws.java.vm" lastver="1.0.0.0" size="1774" />
+    <LocalFile path="model.cs.vm" lastver="1.0.0.0" size="1546" />
+    <LocalFile path="object.xml.vm" lastver="1.0.0.0" size="772" />
+    <LocalFile path="sqlmapconfig.xml.vm" lastver="1.0.0.0" size="81" />
+    <LocalFile path="template.test.createtable.sql.vm" lastver="1.0.0.0" size="849" />
+    <LocalFile path="tg.bbox.aq.withaudit.sql.vm" lastver="1.0.0.0" size="1101" />
+    <LocalFile path="tg.bbox.aq.withoutaudit.sql.vm" lastver="1.0.0.0" size="1467" />
+    <LocalFile path="webserviceContext.xml.vm" lastver="1.0.0.0" size="936" />
+    <LocalFile path="wsimpl.java.vm" lastver="1.0.0.0" size="2693" />
+    <LocalFile path="lua51.dll" lastver="1.0.0.0" size="292352" />
+    <LocalFile path="LuaInterface.dll" lastver="2.0.0.16708" size="53760" />
   </UpdateFileList>
 </Config>
