--- a/MDT_Tools/MDT.ThirdParty.Controls/MDT.ThirdParty.Controls.csproj
+++ b/MDT_Tools/MDT.ThirdParty.Controls/MDT.ThirdParty.Controls.csproj
@@ -12,7 +12,7 @@
     <AssemblyName>MDT.ThirdParty.Controls</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <SignAssembly>true</SignAssembly>
+    <SignAssembly>false</SignAssembly>
     <AssemblyOriginatorKeyFile>MDT.Tools.pfx</AssemblyOriginatorKeyFile>
     <FileUpgradeFlags>
     </FileUpgradeFlags>
