--- a/MDT_Tools/client/control/templateconfig.ini
+++ b/MDT_Tools/client/control/templateconfig.ini
@@ -7,15 +7,15 @@ TemplateNum=1
 MenuName1=Component查看
 #DB,Fix
 DataTye1=Fix
-TemplateName1=component.vm
+TemplateName1=fixmessage.vm
 
 #Java代码一般保存为GBK
 SaveFileEncoding1=GBK
 #SaveFilePath1=
 
 #如果IsAutoGenSaveFileName=true,系统会自动根据节点名字+"."+CodeLanguage来形成名字，忽略SaveFileName的配置
-IsAutoGenSaveFileName1=true
-#SaveFileName1=
+IsAutoGenSaveFileName1=false
+SaveFileName1=fixmessage.java
 
 IsShowGenCode1=true
 #Java,C#,TSQL,HTML,JavaScript,XML,C++.NET
