--- a/MDT_Tools/client/control/templateconfig.ini
+++ b/MDT_Tools/client/control/templateconfig.ini
@@ -8,6 +8,12 @@ MenuName1=Component查看
 #DB,Fix
 DataTye1=Fix
 TemplateName1=fixmessage.vm
+#TemplateName1=standardheader.vm
+#TemplateName1=standardtrailer.vm
+#TemplateName1=message.vm
+#TemplateName1=component.vm
+
+
 
 #Java代码一般保存为GBK
 SaveFileEncoding1=GBK
