--- a/MDT_Tools/client/control/FixMap.ini
+++ b/MDT_Tools/client/control/FixMap.ini
@@ -3,7 +3,15 @@ STRING		String
 INT		int
 Currency	String
 Price		float
-QTY             Qty
+QTY		Qty
+CHAR		char
+MULTIPLEVALUESTRING		String
+LENGTH		decimal
+DATA		decimal
+SEQNUM		decimal
+UTCTIMESTAMP		decimal
+
+
 
 
 [FixToCSharp]
