--- a/MDT_Tools/client/control/templateconfig.ini
+++ b/MDT_Tools/client/control/templateconfig.ini
@@ -1,28 +1,59 @@
 ﻿
 [TemplateConfig]
-TemplateNum=1
-
+TemplateNum=5
 [TemplateParas]
-TemplateNum=1
-MenuName1=Component查看
+TemplateNum=5
+MenuName1=Header节点生成
+MenuName2=Trailer节点生成
+MenuName3=Message节点生成
+MenuName4=Component节点生成
+MenuName5=Fields节点生成
 #DB,Fix
 DataTye1=Fix
-TemplateName1=fixmessage.vm
-#TemplateName1=standardheader.vm
-#TemplateName1=standardtrailer.vm
-#TemplateName1=message.vm
-#TemplateName1=component.vm
+DataTye2=Fix
+DataTye3=Fix
+DataTye4=Fix
+DataTye5=Fix
 
+TemplateName1=standardheader.vm
+TemplateName2=standardtrailer.vm
+TemplateName3=message.vm
+TemplateName4=component.vm
+TemplateName5=fixmessage.vm
 
 
 #Java代码一般保存为GBK
 SaveFileEncoding1=GBK
-#SaveFilePath1=
+SaveFileEncoding2=GBK
+SaveFileEncoding3=GBK
+SaveFileEncoding4=GBK
+SaveFileEncoding5=GBK
+SaveFilePath5=true
 
 #如果IsAutoGenSaveFileName=true,系统会自动根据节点名字+"."+CodeLanguage来形成名字，忽略SaveFileName的配置
 IsAutoGenSaveFileName1=false
-SaveFileName1=fixmessage.java
+SaveFileName1=standardheader.java
+
+IsAutoGenSaveFileName2=false
+SaveFileName2=standardtrailer.java
+
+IsAutoGenSaveFileName3=true
+#SaveFileName3=message.java
+
+IsAutoGenSaveFileName4=true
+#SaveFileName4=component.java
+
+IsAutoGenSaveFileName5=false
+SaveFileName5=fixmessage.java
 
 IsShowGenCode1=true
+IsShowGenCode2=true
+IsShowGenCode3=true
+IsShowGenCode4=true
+IsShowGenCode5=true
 #Java,C#,TSQL,HTML,JavaScript,XML,C++.NET
 CodeLanguage1=Java
+CodeLanguage2=Java
+CodeLanguage3=Java
+CodeLanguage4=Java
+CodeLanguage5=Java
