--- a/MDT_Tools/client/control/templateconfig.ini
+++ b/MDT_Tools/client/control/templateconfig.ini
@@ -46,11 +46,11 @@ IsAutoGenSaveFileName4=true
 IsAutoGenSaveFileName5=false
 SaveFileName5=fixmessage.java
 
-IsShowGenCode1=true
-IsShowGenCode2=true
-IsShowGenCode3=true
-IsShowGenCode4=true
-IsShowGenCode5=true
+IsShowGenCode1=false
+IsShowGenCode2=false
+IsShowGenCode3=false
+IsShowGenCode4=false
+IsShowGenCode5=false
 #Java,C#,TSQL,HTML,JavaScript,XML,C++.NET
 CodeLanguage1=Java
 CodeLanguage2=Java
