--- a/MDT_Tools/client/control/templateconfig.ini
+++ b/MDT_Tools/client/control/templateconfig.ini
@@ -52,8 +52,8 @@ IsShowGenCode3=false
 IsShowGenCode4=false
 IsShowGenCode5=false
 #Java,C#,TSQL,HTML,JavaScript,XML,C++.NET
-CodeLanguage1=Java
-CodeLanguage2=Java
+CodeLanguage1=java
+CodeLanguage2=java
 CodeLanguage3=Java
-CodeLanguage4=Java
-CodeLanguage5=Java
+CodeLanguage4=java
+CodeLanguage5=java
